added google map

--- a/cup_of_tea/Info.plist
+++ b/cup_of_tea/Info.plist
@@ -57,5 +57,10 @@
 	<true/>
 	<key>FirebaseScreenReportingEnabled</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	    <string>googlechromes</string>
+	    <string>comgooglemaps</string>
+	</array>
 </dict>
 </plist>
