--- a/cup_of_tea/Info.plist
+++ b/cup_of_tea/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDisplayName</key>
 	<string>Cup of Coffee</string>
 	<key>CFBundleExecutable</key>
@@ -59,8 +61,10 @@
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
-	    <string>googlechromes</string>
-	    <string>comgooglemaps</string>
+		<string>googlechromes</string>
+		<string>comgooglemaps</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Choose a profile photo</string>
 </dict>
 </plist>
