load data succeed

--- a/cup_of_tea/Info.plist
+++ b/cup_of_tea/Info.plist
@@ -66,5 +66,7 @@
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Choose a profile photo</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Take a profile photo</string>
 </dict>
 </plist>
