please don't ruin my work autolayout

--- a/cup_of_tea/Settings.bundle/Root.plist
+++ b/cup_of_tea/Settings.bundle/Root.plist
@@ -24,19 +24,13 @@
 		</dict>
 		<dict>
 			<key>Type</key>
-			<string>PSSliderSpecifier</string>
+			<string>PSTextFieldSpecifier</string>
+			<key>Title</key>
+			<string>My Contact</string>
 			<key>Key</key>
-			<string>slider_preference</string>
+			<string>my_contact</string>
 			<key>DefaultValue</key>
-			<real>0.5</real>
-			<key>MinimumValue</key>
-			<integer>0</integer>
-			<key>MaximumValue</key>
-			<integer>1</integer>
-			<key>MinimumValueImage</key>
-			<string></string>
-			<key>MaximumValueImage</key>
-			<string></string>
+			<string>2061582345</string>
 		</dict>
 	</array>
 </dict>
