--- a/cup_of_tea/Settings.bundle/Root.plist
+++ b/cup_of_tea/Settings.bundle/Root.plist
@@ -20,7 +20,7 @@
 			<key>Key</key>
 			<string>set_up</string>
 			<key>DefaultValue</key>
-			<true/>
+			<false/>
 		</dict>
 		<dict>
 			<key>Type</key>
